# credit-ocr-module

./: .env  .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
config/: settings.py
notebooks/: 01_convert_pdf_to_images.ipynb  02_image_preprocessing.ipynb  03_run_ocr.ipynb
src/api/: app.py
src/core/: pipeline.py
src/engines/: dummy.py  gemma_ocr.py  hybrid_ocr.py  smolvlm_ocr.py
src/factory/: factory.py
src/helpers/: overlay.py
src/interface/: module_interface.py
tests/: local_test.py  test_ocr.py
