[project]
name = "credit-ocr-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "ollama>=0.4.8",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]
